actix-web-codegen/tests/trybuild/scope-missing-args.stderr
error: missing arguments for scope macro, expected: #[scope("/prefix")]
 --> tests/trybuild/scope-missing-args.rs:3:1
  |
3 | #[scope]
  | ^^^^^^^^
  |
  = note: this error originates in the attribute macro `scope` (in Nightly builds, run with -Z macro-backtrace for more info)
