actix-web-codegen/tests/trybuild/scope-missing-args.rs
use actix_web_codegen::scope;

#[scope]
mod api {}

fn main() {}
